feat: Add skip to filter options link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <header>
+    <!-- Skip link: skips the map and goes directly to the filter options -->
+    <a href="#filter" class="skip-link">Skip to filter options</a>
     <nav>
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
@@ -22,7 +24,7 @@
       <div id="map"></div>
     </section>
     <section>
-      <div class="filter-options">
+      <div class="filter-options" id="filter">
         <h2>Filter Results</h2>
         <select 
           id="neighborhoods-select"
