--- a/restaurant.html
+++ b/restaurant.html
@@ -66,6 +66,8 @@
   <script src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script src="js/restaurant_info.js"></script>
+  <script src="js/register-sw.js"></script>
+
   <!-- End scripts -->
 
 </body>
